# ProjetUML

./: .gitignore  CMakeLists.txt  Capteur.cpp  Capteur.h  Controller.cpp  DiagrammeClasseAirWatcher.mdj  FournisseurPurificateur.cpp  FournisseurPurificateur.h  Makefile  Mesure.cpp  Mesure.h  Model.cpp  Model.h  Purificateur.cpp  Purificateur.h  README.md  Test.cpp  TestMesuresCapteurs.cpp  Utilisateur.cpp  Utilisateur.h  UtilisateurGouvernement.cpp  UtilisateurGouvernement.h  UtilisateurPrive.cpp  UtilisateurPrive.h  Vue.cpp  Vue.h
Data/DataSetTest-CapteursSimilaires/: Explication tests.txt  measurementsTest.csv  measurementsTest3.csv  sensorsTest2.csv
Data/DataSetTest-QualiteAirPoint/: measureTest0.csv  measureTest1.csv  sensorTest0.csv  sensorTest1.csv
Objets/: Capteur.cpp  Capteur.h  FournisseurPurificateur.cpp  FournisseurPurificateur.h  Mesure.cpp  Mesure.h  Purificateur.cpp  Purificateur.h  Utilisateur.cpp  Utilisateur.h  UtilisateurGouvernement.cpp  UtilisateurGouvernement.h  UtilisateurPrive.cpp
RenduUML-3201-3209/: Controller.cpp  Model.cpp  README.md
RenduUML-3201-3209/Data/DataSetTest-CapteursSimilaires/: measurementsTest0.csv  measurementsTest1.csv  measurementsTest2.csv
RenduUML-3201-3209/Data/DataSetTest-QualiteAirPoint/: measureTest0.csv  measureTest2.csv
RenduUML-3201-3209/Objets/: Capteur.cpp  FournisseurPurificateur.h  Mesure.cpp  Mesure.h  Purificateur.cpp  UtilisateurGouvernement.cpp  UtilisateurPrive.h
RenduUML-3201-3209/Tests/: TestCapteursSimilaires.cpp  TestMesures.cpp  TestQualiteAirPoint.cpp  TestValeursPurificateurs.cpp
Tests/: TestCapteurs.cpp  TestCapteursSimilaires.cpp  TestMesures.cpp  TestMesuresCapteurs.cpp  TestQualiteAirPoint.cpp  TestValeursPurificateurs.cpp
